src/main/java/com/example/sillok_server/global/error/ErrorResponse.java
package com.example.sillok_server.global.error;

import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Getter;

@Getter
@Builder
@AllArgsConstructor
public class ErrorResponse {

    private int status;
    private String message;

}
